fix(style): fix text button focus ring and link vertical align

--- a/packages/veui-theme-dls/link.less
+++ b/packages/veui-theme-dls/link.less
@@ -5,6 +5,7 @@
   color: @dls-link-font-color-normal;
   text-decoration: @dls-link-text-decoration;
   outline: none;
+  vertical-align: middle;
   .veui-transition(color);
 
   &:hover {
